--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>MICROPHONE</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<script type="text/javascript" src="http://cdn.tonejs.org/latest/Tone.min.js"></script>
+	<script type="text/javascript" src="https://cdn.tonejs.org/latest/Tone.min.js"></script>
 	<script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="./scripts/draggabilly.js"></script>
 	<script type="text/javascript" src="./scripts/Interface.js"></script>
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<style type="text/css">
-		@import url(http://fonts.googleapis.com/css?family=Lato:100,400);
+		@import url(https://fonts.googleapis.com/css?family=Lato:100,400);
 		body {font:400 15px "Lato"; 
 		background:#333; 
 		transition: background 0.3s ease-in;
