--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!-->  <!--<![endif]-->
     <head>
 
-         <script src="http://code.jquery.com/jquery-latest.min.js"
+         <script src="https://code.jquery.com/jquery-3.1.0.min.js"
         type="text/javascript"></script>
         <script src="js/jquery.waypoints.min.js"></script>
         <script src="js/processing.min.js"></script>
