--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
          <script src="https://code.jquery.com/jquery-3.1.0.min.js"
         type="text/javascript"></script>
-        <script src="js/jquery.waypoints.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"></script>
         <script src="js/processing.min.js"></script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
