--- a/canada_toxic_releases_2013/index.html
+++ b/canada_toxic_releases_2013/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Canadian Factories Releasing Known Toxins in Tonnes, 2013</title>
+    <title>Canadian Toxic Releases 2013</title>
     
 <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.26.0/mapbox-gl.css' rel='stylesheet' />
     <link href="css/main.css" rel="stylesheet">
