--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 		<div class="wrap">
             <div class="icons">
                 <div class="icon">
-                    <a href="//ca.linkedin.com/in/hilarykitz" target="_blank"><img id="i-img" src="img/linkedin.svg"/></a>
+                    <a href="//www.linkedin.com/in/hilarykitz" target="_blank"><img id="i-img" src="img/linkedin.svg"/></a>
                 </div>
                 <div class="icon">
                     <a href="twitter.com/blandkitz" target="_blank"><img id="t-img" src="img/hilary_kitz_twitter.svg"/></a>
@@ -394,6 +394,49 @@
 
 			</section>
 			<main class="major" style="max-width:100%; margin-top:0;background:#1E211E;">
+                <section class="siteholder" id="siteholder" style="max-width:100%; min-width:100%;">
+                    <div class="titlebox"><p style="color:#FFF;">Past Work</p></div>
+
+                    <div class="goeuro octo planet"> \
+                        <div class="description2" style="padding-top:1em;"><a href="//goeuro.com/" target="_blank"><p>GoEuro<br/>Java, Javascript, Less</p></a></div>
+                    </div>
+                    <div class="hover-desc"><p>Code and style the searchbar + surrounding 'landing pages' for this travel website.</p></div>
+
+                    <div class="ja octo planet"> \
+                        <div class="description2" style="padding-top:1em;"><a href="//resources.jacanada.org" target="_blank"><p>Junior Achievement Canada<br/>UX Design, CSS, Javascript, Bootstrap</p></a></div>
+                    </div>
+                    <div class="hover-desc"><p>Mobile-first education platform for Junior Achievement Canada, 2015.</p></div>
+
+                    <div class="clausehound octo planet"> \
+                        <div class="description2" style="padding-top:1em;"><a href="http://www.clausehound.com/documents" target="_blank"><p>Clausehound<br/>UX Design, CSS, Javascript, PHP, CMS</p></a></div>
+                    </div>
+                    <div class="hover-desc"><p>I was hired in Spring 2014 by Clasehound to design,
+                        and front-end code a conversion from a wiki-style list of 10,000 clauses to a legal contract building web app.
+                        The client wanted users to be able to build their own contracts, while being able to cross-check their work with standard contracts. For a long time the client wanted to keep the individual clause pages, which were sometimes 6 categories deep. I slowly designed these to become entry-points to parent contracts, which in turn acted as clause indexes.</p></div>
+
+                    <div class="commute octo planet"> <div class="description2" style="padding-top:1em;"><a href="https://www.rbcadvicecentre.com/pembina-location-matters/" target="_blank"><p>Infographic and Animated<br/> Mini-Site<br/>Scrolling CSS & Javascript Animation, <br/>Data Visualization</p></a>
+                    </div>  </div>
+                    <div class="hover-desc"><p>This site was hand-coded on Bootstrap for RBC and Pembina, initially involved parallax and scrolling animations, scrapped to allow compatibility with legacy browsers. The requested site was data heavy, so kept a focus on animated infrographics, while maintaining the RBC branding style.</p></div>
+
+
+                    <div class="cabfare octo planet"> <div class="description2" style="padding-top:1em;"><a href="http://www.hill.infinitepartycles.com" target="_blank"><p>Cab Fare <br/> PHP, JSON, HTML, CSS, Javascript</p></a></div>
+                    </div>
+                    <div class="hover-desc"><p>A student assignment - this site uses the Google Maps API to calculate the approximate cost of a cab anywhere in Toronto. Designed by me and coded by hand on Bootstrap.</p></div>
+
+
+                    <div class="patterns octo planet"> <div class="description2" style="padding-top:1em;"><a href="http://www.infinitepartycles.com/patterns" target="_blank"><p>Pattern Playground <br/> Javascript & CSS Animation, Asset Design</p></a>
+                    </div>
+                    </div>
+                    <div class="hover-desc"><p>An ongoing personal project, exploring the potentialities of animating patterns. On hold while I play with visualizations in Java Processing! Built from scratch, uses CSS Animations and limited JS. </p></div>
+                    </div>
+
+                    <div class="kaleidoscope octo planet"> <div class="description2" style="padding-top:1em;"><a href="http://www.swirling.infinitepartycles.com" target="_blank"><p>Kaleidoscope <br/> Javascript and CSS Animation, UserFlow</p></a>
+                    </div>
+                    </div>
+                    <div class="hover-desc"><p>A school project, this site was my first foray into jQuery animation.</p></div>
+
+
+                </section>
                 <section id="graphics" style="position:relative; max-width:100%; box-sizing:border-box;">
 				<div class="wrap">
 						<div class="top"><a href="#">Top</br><img src="img/weetriangle.png"/></a></div>
@@ -471,7 +514,7 @@
 				</div>
 				<div class="bottom-trigger" style="position:absolute;bottom:0;width:1em;height:1em;"></div>
 				</section>
-			    <section  id="siteholder" class="siteholder">
+
         </main>
         </section>
 	</main>
