--- a/waves/index.html
+++ b/waves/index.html
@@ -7,9 +7,8 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
 			body {
-/* Rectangle 1: */
-background-image: linear-gradient(-180deg, #4E617B 0%, #362D36 100%);
-				margin: 0px;
+				background-image: linear-gradient(180deg, #4E617B 0%, #362D36 100%);
+				margin: 0;
 				overflow: hidden;
 			}
 
@@ -50,9 +49,8 @@ background-image: linear-gradient(-180deg, #4E617B 0%, #362D36 100%);
 				container = document.createElement( 'div' );
 				document.body.appendChild( container );
 
-				camera = new THREE.PerspectiveCamera(20, 2*(window.innerWidth) / window.innerHeight,500,8000);
-				//camera = new THREE.PerspectiveCamera( 50, 2*(window.innerWidth) / window.innerHeight, 500, 10000 );
-				camera.position.z = -500;
+				camera = new THREE.PerspectiveCamera(20, 2*(window.innerWidth) / window.innerHeight,300,8000);
+				camera.position.z = -300;
 
 				scene = new THREE.Scene();
 
