--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     <a href="//www.linkedin.com/in/hilarykitz" target="_blank"><img id="i-img" src="img/linkedin.svg"/></a>
                 </div>
                 <div class="icon">
-                    <a href="twitter.com/blandkitz" target="_blank"><img id="t-img" src="img/hilary_kitz_twitter.svg"/></a>
+                    <a href="https://github.com/hilarykitz/" target="_blank"><img id="t-img" src="img/github.svg"/></a>
                 </div>
             </div>
 		</div>
@@ -308,8 +308,8 @@
 
 <section class="major" style="min-width:100%;">
 	<main class="covers"  style="min-width:100%;">
-		<section class="wholething" style="position:relative; min-width:100%;padding-top:30px; padding-top:2rem;">
-			<h1 style="text-align:center; line-height:60px; font-family:'Salome'; color:darkslategrey;">
+		<section class="wholething" style="position:relative; min-width:100%;">
+			<h1 style="text-align:center; line-height:60px; font-family:'Salome'; color:darkslategrey; padding-top: 40px;">
 				The Tools I Like Best</h1>
 			<div id="threedeecontainer">
 
@@ -376,20 +376,21 @@
 					<h1 style="color:darkslategrey; font-family:Salome;">Skills</h1>
 					<p style="font-size:0.6em; color:darkkhaki;">Mobile: Tap Below</p>
 
-					<h2 style="color:#333; margin-top:3em;">Best At</h2>
-					<div class="caption"> <h3><span class="underlines">Coding Languages:</span> HTML5 / CSS3 / JQuery, Javascript / PHP / CMS </h3></div>
+					<h2 style="color:#333;">Mostly Coding</h2>
+					<div class="caption"><h3><span class="underlines">Basics:</span> HTML5 / Javascript ES6 / CSS3 / React + React Native </h3></div>
 
-					<div class="goodat" style="margin-top: 2em;">  </div>
-					<div class="caption"> <h3><span class="underlines">Design Tools:</span> Adobe Illustrator / Photoshop / InDesign / Sketch / </h3></div>
+					<div class="jewels goodat" style="margin-top: 2em;">  </div>
+					<div class="caption"> <h3><span class="underlines">Fun ones:</span> Processing / Three.js / D3 / WebGL / Mapbox + GeoData </h3></div>
 
 
-					<h2 style="color:#333; margin-top:3em;">Good At</h2>
-					<div class="cando">    </div>
-					<div class="caption"> <h3><span class="underlines">Animation & 3D Modelling Tools:</span> Adobe After Effects / Cinema 4D / 3DS Max</h3></div>
+					<h2 style="color:#333; margin-top:3em;">Sometimes Designing</h2>
+                    <div class="caption"> <h3><span class="underlines">Vector:</span> Sketch / InDesign / Illustrator </h3></div>
+					<div class="jewels cando">    </div>
+					<div class="caption"> <h3><span class="underlines">Animation & 3D:</span> After Effects / Cinema 4D </h3></div>
 
-					<h2 style="color:#333; margin-top:3em;">Training At</h2>
-					<div class="wanttolearn"> </div>
-					<div class="caption"> <h3><span class="underlines">New Coding and Animation Languages:</span> Angular.js / Ruby / Processing.js</h3></div>
+					<h2 style="color:#333; margin-top:3em;">Still Learning</h2>
+					<div class="jewels wanttolearn"> </div>
+					<div class="caption"> <h3><span class="underlines">Other Languages:</span> Java / Meteor / Python / PureData </h3></div>
 				</div>
 
 			</section>
@@ -449,15 +450,12 @@
 							<canvas data-processing-sources="pureprocess1/pureprocess1.pde"></canvas>
 
 						</div>
-
 						<div class="img-wrap">
 							<p>Processing Animation [Uploaded as Animated GIF]</p>
 						</div>
 						<div class="img-wrap">
 							<img class="graphicpiece" style="width:600px; height:600px;" src="img/Self-Building-Shell-Processing-Java-Animation.gif"/>
 						</div>
-
-						<div class="img-wrap" style="z-index:9999999; margin:40px auto;"><a class="btn" href="/tile_mile">Animated SVG</a></div>
 				</div>
 				<div class="wrap">
 					<p>Vector and Drawn Stuff</p>
