--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!-->  <!--<![endif]-->
 <head>
 
-	<script src="http://code.jquery.com/jquery-latest.min.js"
+	<script src="//code.jquery.com/jquery-latest.min.js"
 			type="text/javascript"></script>
 	<script src="js/jquery.waypoints.min.js"></script>
 	<script src="js/processing.min.js"></script>
