--- a/hill/index.html
+++ b/hill/index.html
@@ -28,7 +28,7 @@
 <div class="main-container">
     <button type="button" class="login">LOGIN</button>
     <a class="logout" href="logout.php" style="display:none">logout</a>
-    <div class="main wrapper clearfix">
+    <div class="main clearfix">
         <!--background images-->
         <img class="lamp" src="img/streetlamp.png"/>
         <!--start real content-->
